force-app/main/default/objects/Integration_Target__c/Integration_Target__c.object-meta.xml
<CustomObject>
    <label>Integration Target</label>
    <nameField>
        <label>Integration Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>