force-app/main/default/objects/Integration_Target__c/fields/Integration_User__c.field-meta.xml
<CustomField>
    <fullName>Integration_User__c</fullName>
    <label>Integration User</label>
    <length>50</length>
    <type>Text</type>
</CustomField>