force-app/main/default/objects/Integration_Target__c/fields/User_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Field_Name__c</fullName>
    <label>User Field Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>